<?xml version="1.0"?>
<package format="2">
  <name>rtf-test-plant</name>
  <version>0.0.1</version>
  <description>The rtf-test-plant package</description>

  <maintainer email="s.nakaoka@gmail.com">Shin'ichiro Nakaoka</maintainer>
  <author email="s.nakaoka@gmail.com">Shin'ichiro Nakaoka</author>
  <author>International Rescue System Institute (IRS)</author>
  <author>National Institute of Advanced Industrial Science and Technology (AIST)</author>
  <author>FSK CO., LTD.</author>

  <license>TODO</license>

  <url type="website">http://choreonoid.org/</url>
  <url type="repository">https://github.com/choreonoid/rtf-test-plant</url>
  <url type="bugtracker">https://github.com/choreonoid/rtf-test-plant/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>  

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
